# Mini-Amazon-

./: .gitignore  C++ projet ayoub.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.ps1  setup.sh
Resourses/: PS_with_mysql.md  PS_wto_mysql.md  style.md  tasks_membres.md
include/cli/: UI.h
include/database/: CustomerDAO.h  Database.h  OrderDAO.h  ProductDAO.h  Store.h
include/gui/: CartPage.h  CheckoutPage.h  MainWindow.h  OrderHistoryPage.h  ProductPage.h  RecommendationPage.h
include/order/: Cart.h  CartItem.h  Order.h
include/product/: Clothing.h  Electronics.h  Food.h  Product.h  RecommendationService.h
include/user/: Customer.h
sql/: schema.sql
src/: main_cli.cpp
src/cli/: UI.cpp
src/database/: CustomerDAO.cpp  Database.cpp  OrderDAO.cpp  ProductDAO.cpp  Store.cpp
src/gui/: CartPage.cpp  CheckoutPage.cpp  MainWindow.cpp  OrderHistoryPage.cpp  ProductPage.cpp  RecommendationPage.cpp
src/order/: Cart.cpp  CartItem.cpp  Order.cpp
src/product/: Clothing.cpp  Electronics.cpp  Food.cpp  Product.cpp  RecommendationService.cpp
src/user/: Customer.cpp
